v3.7.7 (XXXX-XX-XX)
-------------------

* Fixed issue #12363: Foxx HTTP API upgrade/replace always enables development
  mode.

* Fixed BTS-284: upgrading from 3.6 to 3.7 in cluster enviroment.
  Moved upgrade ArangoSearch links task to later step as it needs cluster
  connection. Removed misleading error log records for failed ArangoSearch index
  creation during upgrade phase.

* Normalize user-provided input/output directory names in arangoimport,
  arangoexport, arangodump and arangorestore before splitting them into path
  components, in the sense that now both forward and backward slashes can be
  used on Windows, even interchangingly.

* Fixed some wrong behaviour in single document updates. If the option
  ignoreRevs=false was given and the precondition _rev was given in the body but
  the _key was given in the URL path, then the rev was wrongly taken as 0,
  rather than using the one from the document body.

* Allow {USER} paceholder string also in `--ldap.search-filter`.

* Make `padded` and `autoincrement` key generators export their `lastValue`
  values, so that they are available in dumps and can be restored elsewhere from
  a dump.

* Fix decoding of values in `padded` key generator when restoring from a dump.

* Fixed error reporting for hotbackup restore from dbservers back to
  coordinators. This could for example swallow out of disk errors during
  hotbackup restore.

* Fix decoding of values in `padded` key generator when restoring from a dump.

* Fixed some situations of
  [...]
  SUBQUERY
  FILTER
  LIMIT
  [...]
  in AQL queries, yielding incorrect responses. A distributed state within the
  subquery was not resetted correctly. This could also lead into "shrink" errors
  of AQL item blocks, or much higher query runtimes.
  Fixes:
  - BTS-252
  - ES-687
  - github issue: #13099
  - github issue: #13124
  - github issue: #13147
  - github issue: #13305
  - DEVSUP-665

* Fix a bug in the agency Supervision which could lead to removeFollower