@@ -264,6 +264,7 @@ configRouter.patch((req, res) => {
   } else {
     if (warnings) {
       for (const key of Object.keys(warnings)) {
+        if (!values[key]) continue;
         values[key].warning = warnings[key];
       }
     }
@@ -284,6 +285,7 @@ configRouter.put((req, res) => {
   } else {
     if (warnings) {
       for (const key of Object.keys(warnings)) {
+        if (!values[key]) continue;
         values[key].warning = warnings[key];
       }
     }
@@ -313,6 +315,7 @@ depsRouter.patch((req, res) => {
   } else {
     if (warnings) {
       for (const key of Object.keys(warnings)) {
+        if (!values[key]) continue;
         values[key].warning = warnings[key];
       }
     }
@@ -333,6 +336,7 @@ depsRouter.put((req, res) => {
   } else {
     if (warnings) {
       for (const key of Object.keys(warnings)) {
+        if (!values[key]) continue;
         values[key].warning = warnings[key];
       }
     }
